fixed horizontal scrolling

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,8 @@
   /* position: fixed; */
   position: absolute;
   top: 0px;
-  width: 100vw;
+  width: 100%;
+  /* max-width: 100vw; */
   /* max-width: 1280px; */
   /* height: 80px; */
   border-bottom: 2px solid #e0e0e0;
